{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 329,
  "lineage": "1ced565d-6d4c-00f8-0881-244a7fea318c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a10b79bf0a2a11c3",
            "arn": "arn:aws:ec2:ap-south-1:905418099163:elastic-ip/eipalloc-0a10b79bf0a2a11c3",
            "domain": "vpc",
            "id": "eipalloc-0a10b79bf0a2a11c3",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-132-245.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.132.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:internet-gateway/igw-0ae74187a16b44a88",
            "id": "igw-0ae74187a16b44a88",
            "owner_id": "905418099163",
            "tags": {
              "Name": "YT-Internet Gateway"
            },
            "tags_all": {
              "Name": "YT-Internet Gateway"
            },
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418099163:loadbalancer/app/yt-app-lb/b704f730c4a4338d",
            "arn_suffix": "app/yt-app-lb/b704f730c4a4338d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "yt-app-lb-1914193068.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418099163:loadbalancer/app/yt-app-lb/b704f730c4a4338d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yt-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09bc04bd80856af07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08339bd8ec9285a0e"
              },
              {
                "subnet_id": "subnet-0a740566be0e1abc1"
              }
            ],
            "subnets": [
              "subnet-08339bd8ec9285a0e",
              "subnet-0a740566be0e1abc1"
            ],
            "vpc_id": "vpc-0841eec28d8804452",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418099163:listener/app/yt-app-lb/b704f730c4a4338d/141561108fb41252",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418099163:targetgroup/yt-web-server-tg/a39d2dd6da877847",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418099163:listener/app/yt-app-lb/b704f730c4a4338d/141561108fb41252",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:905418099163:loadbalancer/app/yt-app-lb/b704f730c4a4338d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "yt-alb-listener"
            },
            "tags_all": {
              "Name": "yt-alb-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_lb.app_lb",
            "aws_lb_target_group.alb_ec2_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_ec2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:905418099163:targetgroup/yt-web-server-tg/a39d2dd6da877847",
            "arn_suffix": "targetgroup/yt-web-server-tg/a39d2dd6da877847",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:905418099163:targetgroup/yt-web-server-tg/a39d2dd6da877847",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "yt-web-server-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "yt-alb_ec2_tg"
            },
            "tags_all": {
              "Name": "yt-alb_ec2_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "yt-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a10b79bf0a2a11c3",
            "association_id": "eipassoc-0e4da00a4be48c7a6",
            "connectivity_type": "public",
            "id": "nat-0f25cb66196f364bc",
            "network_interface_id": "eni-00930db31150d8ad7",
            "private_ip": "10.0.1.87",
            "public_ip": "13.202.132.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a740566be0e1abc1",
            "tags": {
              "Name": "YT-Nat Gateway"
            },
            "tags_all": {
              "Name": "YT-Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yt_route_table_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:route-table/rtb-08eb8cb72738082ca",
            "id": "rtb-08eb8cb72738082ca",
            "owner_id": "905418099163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f25cb66196f364bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private subnet Route Table"
            },
            "tags_all": {
              "Name": "Private subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.yt-nat-gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yt_route_table_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:route-table/rtb-035ca6b8010d97888",
            "id": "rtb-035ca6b8010d97888",
            "owner_id": "905418099163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae74187a16b44a88",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnet Route Table"
            },
            "tags_all": {
              "Name": "Public subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9bf13dfc5ceaf61",
            "route_table_id": "rtb-08eb8cb72738082ca",
            "subnet_id": "subnet-0202470bb63eb4d6b"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.yt-nat-gateway",
            "aws_route_table.yt_route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c4ebe0913830cd2",
            "route_table_id": "rtb-08eb8cb72738082ca",
            "subnet_id": "subnet-0414cbb426ca4b82c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.yt-nat-gateway",
            "aws_route_table.yt_route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09084dd3ed873253b",
            "route_table_id": "rtb-035ca6b8010d97888",
            "subnet_id": "subnet-0a740566be0e1abc1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_route_table.yt_route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2185d1abfd62624",
            "route_table_id": "rtb-035ca6b8010d97888",
            "subnet_id": "subnet-08339bd8ec9285a0e"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_route_table.yt_route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:security-group/sg-09bc04bd80856af07",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bc04bd80856af07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "yt-alb-sg",
            "name_prefix": "",
            "owner_id": "905418099163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yt-alb-sg"
            },
            "tags_all": {
              "Name": "yt-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:security-group/sg-06fc648a28bc25e0f",
            "description": "Security Group for Web Server Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fc648a28bc25e0f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-09bc04bd80856af07"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "yt-ec2-sg",
            "name_prefix": "",
            "owner_id": "905418099163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yt-ec2-sg"
            },
            "tags_all": {
              "Name": "yt-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:subnet/subnet-0202470bb63eb4d6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0202470bb63eb4d6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418099163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Private subnet 1"
            },
            "tags_all": {
              "Name": "YT Private subnet 1"
            },
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:subnet/subnet-0414cbb426ca4b82c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0414cbb426ca4b82c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418099163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Private subnet 2"
            },
            "tags_all": {
              "Name": "YT Private subnet 2"
            },
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:subnet/subnet-0a740566be0e1abc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a740566be0e1abc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418099163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Public subnet 1"
            },
            "tags_all": {
              "Name": "YT Public subnet 1"
            },
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:subnet/subnet-08339bd8ec9285a0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08339bd8ec9285a0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418099163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Public subnet 2"
            },
            "tags_all": {
              "Name": "YT Public subnet 2"
            },
            "vpc_id": "vpc-0841eec28d8804452"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418099163:vpc/vpc-0841eec28d8804452",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0612689c82fd29f8c",
            "default_route_table_id": "rtb-0aec9a249a0ee5f60",
            "default_security_group_id": "sg-00702c4555285d08d",
            "dhcp_options_id": "dopt-0498f36d0ea5d0f71",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0841eec28d8804452",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aec9a249a0ee5f60",
            "owner_id": "905418099163",
            "tags": {
              "Name": "yt-vpc"
            },
            "tags_all": {
              "Name": "yt-vpc"
            }
          }
        }
      ]
    }
  ]
}